--- a/package.json
+++ b/package.json
@@ -1,39 +1,89 @@
 {
-  "name": "my-new-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/jest": "24.0.16",
-    "@types/node": "12.6.9",
-    "@types/react": "16.8.24",
-    "@types/react-dom": "16.8.5",
-    "@types/react-router-dom": "^4.3.4",
-    "json-server": "^0.15.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "typescript": "3.5.3"
-  },
+  "name": "react-store",
+  "version": "1.0.0",
+  "description": "",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "clean": "rimraf dist",
+    "build": "npm run clean && cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --inline --color --progress --config config/webpack.dev.js"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@jfrolich/react-emotion": "^9.2.14",
+    "@material-ui/core": "^4.2.0",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.2.0",
+    "@types/jest": "^24.0.16",
+    "@types/react-lazyload": "^2.3.1",
+    "@types/react-redux-toastr": "^7.4.1",
+    "antd": "^3.5.3",
+    "axios": "^0.18.1",
+    "babel-preset-es2015": "^6.24.1",
+    "emotion": "^10.0.14",
+    "emotion-ts-plugin": "^0.4.0",
+    "normalize.css": "^8.0.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.3.2",
+    "react-lazyload": "^2.3.0",
+    "react-redux": "^5.1.1",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
+    "react-toastify": "^5.3.2",
+    "react-toasts": "^3.0.3",
+    "redux": "^4.0.4",
+    "redux-form": "^7.4.2",
+    "redux-saga": "^0.16.0",
+    "typesafe-actions": "^2.2.0",
+    "utility-types": "^2.0.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/lodash": "^4.14.108",
+    "@types/react": "^16.0.5",
+    "@types/react-dom": "^16.0.5",
+    "@types/react-redux": "^6.0.0",
+    "@types/react-router-dom": "^4.2.6",
+    "@types/react-router-redux": "^5.0.18",
+    "@types/redux": "^3.6.0",
+    "@types/redux-devtools": "^3.0.44",
+    "@types/webpack-env": "^1.13.6",
+    "autoprefixer": "^7.1.5",
+    "awesome-typescript-loader": "^4.0.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-import": "^1.6.0",
+    "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-classes": "^6.24.1",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-es2015-parameters": "^6.24.1",
+    "babel-plugin-transform-export-default-name": "^2.0.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.30.1",
+    "moment": "^2.20.1",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "path": "^0.12.7",
+    "postcss-loader": "^2.1.0",
+    "react-emotion": "^10.0.0",
+    "redux-devtools-extension": "^2.13.2",
+    "style-loader": "^0.18.2",
+    "tslint": "^5.10.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^2.8.3",
+    "typings-for-css-modules-loader": "^1.7.0",
+    "url-loader": "^0.5.9",
+    "webpack": "3.6.0",
+    "webpack-dev-server": "2.9.1",
+    "webpack-merge": "^4.1.0"
   }
 }
