--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-es2015": "^6.24.1",
     "emotion": "^10.0.14",
     "emotion-ts-plugin": "^0.4.0",
+    "material-ui": "^0.20.2",
     "normalize.css": "^8.0.1",
     "react": "^16.4.0",
     "react-dom": "^16.3.2",
@@ -29,11 +30,12 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
+    "react-swipeable-views": "^0.13.3",
     "react-toastify": "^5.3.2",
     "react-toasts": "^3.0.3",
     "redux": "^4.0.4",
     "redux-form": "^7.4.2",
-    "redux-saga": "^0.16.0",
+    "redux-saga": "^0.16.2",
     "typesafe-actions": "^2.2.0",
     "utility-types": "^2.0.0"
   },
