--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@jfrolich/react-emotion": "^9.2.14",
-    "@material-ui/core": "^4.2.0",
+    "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.0",
     "@types/jest": "^24.0.16",
@@ -22,10 +22,11 @@
     "babel-preset-es2015": "^6.24.1",
     "emotion": "^10.0.14",
     "emotion-ts-plugin": "^0.4.0",
+    "material-table": "^1.48.0",
     "material-ui": "^0.20.2",
     "normalize.css": "^8.0.1",
-    "react": "^16.4.0",
-    "react-dom": "^16.3.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-lazyload": "^2.3.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.2.2",
