--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@devexpress/dx-react-core": "^2.0.2",
+    "@devexpress/dx-react-grid": "^2.0.2",
+    "@devexpress/dx-react-grid-material-ui": "^2.0.2",
     "@jfrolich/react-emotion": "^9.2.14",
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
@@ -22,7 +25,7 @@
     "babel-preset-es2015": "^6.24.1",
     "emotion": "^10.0.14",
     "emotion-ts-plugin": "^0.4.0",
-    "material-table": "^1.48.0",
+    "material-table": "^1.50.0",
     "material-ui": "^0.20.2",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
