--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "material-ui": "^0.20.2",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.9.0",
     "react-lazyload": "^2.3.0",
     "react-redux": "^5.1.1",
