--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.0",
     "@types/jest": "^24.0.16",
+    "@types/jwt-decode": "^2.2.1",
     "@types/react-lazyload": "^2.3.1",
     "@types/react-redux-toastr": "^7.4.1",
     "antd": "^3.5.3",
@@ -25,6 +26,8 @@
     "babel-preset-es2015": "^6.24.1",
     "emotion": "^10.0.14",
     "emotion-ts-plugin": "^0.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "material-table": "^1.50.0",
     "material-ui": "^0.20.2",
     "normalize.css": "^8.0.1",
